k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycode-server
  labels:
    app: mycode-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mycode-server
  template:
    metadata:
      name: mycode-server
      namespace: hs
      labels:
        app: mycode-server
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey : "kubernetes.io/hostname"
          whenUnsatisfiable : "DoNotSchedule"
      containers:
        - name: server
          image: taehyeok02/mycode-server:11
          imagePullPolicy: Always
          volumeMounts:
            - name: mycode-data
              mountPath: /home/mycode
          ports:
            - name: main
              containerPort: 8080
            - name: test
              containerPort: 3000
            - name: test2
              containerPort: 3001
      volumes:
        - name : mycode-data
          persistentVolumeClaim:
            claimName: mycode-pvc-dynamic
      imagePullSecrets:
        - name: docker-secret
