k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycode-server-service
  namespace: hs
  labels:
    app: mycode-server
spec:
  selector:
    app: mycode-server
  ports:
    - protocol: TCP
      name: Main
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: Test
      port: 3000
      targetPort: 3000
