k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mycode-server
  namespace: hs
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "SESSIONID"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-set-headers: "Upgrade $http_upgrade, Connection Upgrade, Host $host"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls: 
    - secretName: code-taehyeok-org-tls
      hosts:
      - code.taehyeok.org
    - secretName: test-taehyeok-org-tls
      hosts:
      - test.taehyeok.org
  ingressClassName: nginx
  rules:
    - host: code.taehyeok.org
      http:
        paths:
          - backend:
              service:
                name: mycode-server-service
                port:
                  number: 80
            pathType: Prefix
            path: /
        
    - host: test.taehyeok.org
      http:
        paths:
          - backend:
              service:
                name: mycode-server-service
                port:
                  number: 3000
            pathType: Prefix
            path: /
